alignment correction

--- a/styles/style.css
+++ b/styles/style.css
@@ -84,7 +84,7 @@ header {
 }
 .banner-content {
   text-align: center;
-  width: 55%;
+  width: 75%;
   margin: 50px auto;
 }
 .banner-content p {
